--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-	"name": "my-app",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "rm -rf dist && vite build && yarn zip && ./checksize.sh",
-		"build:watch": "chokidar src -c 'yarn build'",
-		"zip": "rm out.zip && (cd dist  && zip -r ../out.zip .)",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-static": "^2.0.2",
-		"@sveltejs/kit": "^1.20.4",
-		"chokidar-cli": "^3.0.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.10.1",
-		"sass": "^1.63.6",
-		"svelte": "^4.0.0",
-		"svelte-check": "^3.4.3",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.3.6"
-	},
-	"type": "module"
+  "name": "vite-project",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "((rm -rf dist) || true) && vite build && yarn zip ",
+    "build:watch": "chokidar src -c 'yarn build'",
+    "zip": "((rm out.zip) || true) && (cd dist  && zip -r ../out.zip .) && ./checksize.sh",
+    "preview": "vite preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json"
+  },
+  "devDependencies": {
+    "@s-libs/micro-dash": "^16.0.0",
+    "@sveltejs/vite-plugin-svelte": "^2.0.4",
+    "@tsconfig/svelte": "^4.0.1",
+    "chokidar-cli": "^3.0.0",
+    "svelte": "^3.58.0",
+    "svelte-check": "^3.3.1",
+    "terser": "^5.18.1",
+    "tslib": "^2.5.0",
+    "typescript": "^5.0.2",
+    "vite": "^4.3.9"
+  },
+  "dependencies": {
+    "wavesurfer.js": "^7.0.0-beta.11"
+  }
 }
