--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@sveltejs/vite-plugin-svelte": "^2.0.4",
     "@tsconfig/svelte": "^4.0.1",
     "chokidar-cli": "^3.0.0",
+    "prettier": "^2.8.8",
+    "prettier-plugin-organize-imports": "^3.2.2",
+    "prettier-plugin-svelte": "^2.10.1",
     "sass": "^1.63.6",
     "svelte": "^3.58.0",
     "svelte-check": "^3.3.1",
     "terser": "^5.18.1",
     "tslib": "^2.5.0",
+    "type-fest": "^3.12.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "wavesurfer.js": "^7.0.0-beta.11"
