--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,7 @@
     "useDefineForClassFields": true,
     "module": "ESNext",
     "resolveJsonModule": true,
-    /**
-     * Typecheck JS in `.svelte` and `.js` files by default.
-     * Disable checkJs if you'd like to use dynamic types in JS.
-     * Note that setting allowJs false does not prevent the use
-     * of JS in `.svelte` files.
-     */
+    "strictNullChecks": true,
     "allowJs": true,
     "checkJs": true,
     "isolatedModules": true
