--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prettier": "^2.8.8",
     "prettier-plugin-organize-imports": "^3.2.2",
     "prettier-plugin-svelte": "^2.10.1",
+    "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.63.6",
     "svelte": "^3.58.0",
     "svelte-check": "^3.3.1",
