--- a/package.json
+++ b/package.json
@@ -30,5 +30,7 @@
     "vite": "^4.3.9",
     "wavesurfer.js": "^7.0.0-beta.11"
   },
-  "dependencies": {}
+  "dependencies": {
+    "nanoid": "^4.0.2"
+  }
 }
