--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "size": "((rm -rf .build) || true) && vite build --outDir .build && ((rm out.zip) || true) && (cd .build && zip -r ../out.zip .) && ./checksize.sh",
+    "size:watch": "chokidar src *.json *.js *.html *.ts -c 'yarn size'",
+    "build": "yarn size && (rm -rf dist || true) && cp .build dist",
     "prebuild": "tsx scripts/prebuild.ts",
     "postbuild": "tsx scripts/postbuild.ts",
-    "build": "((rm -rf dist) || true) && vite build && yarn zip ",
-    "build:watch": "chokidar src *.json *.js *.html *.ts -c 'yarn build'",
-    "zip": "((rm out.zip) || true) && (cd dist  && zip -r ../out.zip .) && ./checksize.sh",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
