--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "size": "((rm -rf .build/*) || true) && vite build --outDir .build && ((rm out.zip) || true) && (cd .build && zip -r ../out.zip .) && ./checksize.sh",
+    "size": "((rm -rf .build/*) || true) && vite build --outDir .build && ((rm out.zip) || true) && (cd .build && zip -9 -r ../out.zip .) && ./checksize.sh",
     "size:watch": "chokidar src *.json *.js *.html *.ts -c 'yarn size'",
     "build": "yarn size && (rm -rf dist || true) && (mkdir dist) && (cp -r .build/* dist)",
     "prebuild": "tsx scripts/prebuild.ts",
