--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "size": "((rm -rf .build/*) || true) && vite build --outDir .build && ((rm out.zip) || true) && (cd .build && zip -9 -r ../out.zip .) && ./checksize.sh",
-    "size:watch": "chokidar src *.json *.js *.html *.ts -c 'yarn size'",
+    "size:watch": "chokidar src *.json *.html *.ts -c 'yarn size'",
     "build": "yarn size && (rm -rf dist || true) && (mkdir dist) && (cp -r .build/* dist)",
     "prebuild": "tsx scripts/prebuild.ts",
     "postbuild": "tsx scripts/postbuild.ts",
