--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
     "postbuild": "tsx scripts/postbuild.ts",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "analyze": "vite-bundle-visualizer"
+    "analyze": "vite-bundle-visualizer",
+    "serve": "http-server .build"
   },
   "devDependencies": {
     "@tsconfig/node16": "^16.1.0",
     "chokidar-cli": "^3.0.0",
+    "http-server": "^14.1.1",
     "nanoid": "^4.0.2",
     "prettier": "^2.8.8",
     "prettier-plugin-organize-imports": "^3.2.2",
     "sass": "^1.63.6",
-    "terser": "^5.18.1",
+    "terser": "^5.18.2",
     "tslib": "^2.5.0",
     "type-fest": "^3.12.0",
     "typescript": "^5.0.2",
